| Summary: | ASTERISK-22263: [patch] 'queue add member ...' help text update | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2013-08-07 15:13:49 | Date Closed: | 2013-09-11 19:04:01 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | SVN | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Asterisk 11 SVN, 396310, Most likely affects all other Asterisk versions that use app_queue | Attachments: | ( 0) app_queue.patch |
| Description: | The current help text is:
{noformat} Usage: queue add member <channel> to <queue> [[[penalty <penalty>] as <membername>] state_interface <interface>] Add a channel to a queue with optionally: a penalty, membername and a state_interface {noformat} From testing I've seen that you can add any dial string (even nonsensical strings) where the help text seems to say that the command takes a channel only. Joshua Colp stated that this is expected behaviour. I propose we correct the text to be more accurate to what is allowed. Proposed text: {noformat} Usage: queue add member <dial string> to <queue> [[[penalty <penalty>] as <membername>] state_interface <interface>] Add a dial string (Such as a channel,e.g. SIP/6001) to a queue with optionally: a penalty, membername and a state_interface {noformat} | ||
| Comments: | |||